parse proxy string as URI to support socks protocol